build & format fixes & github rules

--- a/package.json
+++ b/package.json
@@ -3,21 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "build:prod": "next build && next start",
-    "build:analyze": "ANALYZE=true next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
-    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
-    "lint:check": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 0",
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "tsc --noEmit --watch",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "check": "npm run type-check && npm run lint:check && npm run format:check",
-    "prebuild": "npm run check",
-    "prepare": "npm run check"
+    "type-check": "tsc --noEmit",
+    "validate": "bun run lint && bun run type-check && bun run build",
+    "prepare": "husky install || true"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
