--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
-    "validate": "bun run lint && bun run type-check && bun run build",
-    "prepare": "husky install || true"
+    "validate": "bun run lint && bun run type-check && bun run build"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
