--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@swc/helpers": "^0.5.17",
     "@types/canvas-confetti": "^1.9.0",
     "@vapi-ai/web": "^2.5.0",
+    "axios": "^1.13.4",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
